@@ -4,6 +4,8 @@ jsoup changelog
  * Now automatically detects the encoding character set when parsing HTML from a File or URL. The parser checks
    the content-type header, then the <meta http-equiv> or <meta charset> tag, and finally falls back to UTF-8.
 
+ * Changed DT & DD tags to block-mode tags, to follow practise over spec
+
 *** Release 1.2.2 [2010-Jul-11]
  
  * Performance optimisation:
